--- a/Tictactoe_MyIdea.html
+++ b/Tictactoe_MyIdea.html
@@ -6,9 +6,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <style>
-    table{
+    table {
         border: green;
     }
+
     td {
         height: 40px;
         width: 40px;
@@ -35,45 +36,49 @@
         <td onclick="view(this, '9')"></td>
     </tr>
 </table>
+<button type="button" id="btnRestart">Restart</button>
 <script>
     let x = [];
     let o = [];
     let i = 0;
     let j = 0;
     let check = true;
-    let count=0;
+    let count = 0;
+    let gameOn = true;
 
     function view(cell, str) {
-        if (check) {
-            if ($(cell).text() === "") {
-                $(cell).text("X");
-            }
-            i += 1;
-            x[i] = parseInt(str);
-            if (checkWin(x)) {
-                alert('X win');
-                reset();
+        if(gameOn){
+            if (check) {
+                if ($(cell).text() === "") {
+                    $(cell).text("X");
+                }
+                i += 1;
+                x[i] = parseInt(str);
+                if (checkWin(x)) {
+                    alert('X win');
+                    gameOn = false;
+                } else {
+                    check = false;
+                    count += 1;
+                }
             } else {
-                check = false;
+                if ($(cell).text() === "") {
+                    $(cell).text("O");
+                }
+                j += 1;
+                o[j] = parseInt(str);
+                if (checkWin(o)) {
+                    alert('O win');
+                    gameOn = false;
+                } else {
+                    check = true;
+                    count += 1;
+                }
             }
-        } else {
-            if ($(cell).text() === "") {
-                $(cell).text("O");
+            if (count == 9) {
+                alert('Hoa');
+                gameOn = false;
             }
-            j += 1;
-            o[j] = parseInt(str);
-            if (checkWin(o)) {
-                alert('O win');
-                reset();
-            } else {
-                check = true;
-            }
-        }
-
-        count += 1;
-        if (count == 9) {
-            alert('Hoa')
-            reset();
         }
     }
 
@@ -113,15 +118,16 @@
         return false;
     }
 
-    function reset() {
+    $("#btnRestart").click(function () {
         $("#gameBoard td").text("");
         x = [];
         o = [];
         i = 0;
         j = 0;
         check = true;
-        count=0;
-    }
+        count = 0;
+        gameOn = true;
+    })
 
 </script>
 </body>
